docs: fix missing search on mobile, cleanup navbar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,52 +36,3 @@
 .footer {
     @apply px-8 lg:px-16;
 }
-
-.navbar__item:has(> #github-button) {
-    display: inline-block;
-}
-
-@media screen and (max-width: 445px) {
-    #github-text {
-        display: none;
-    }
-}
-
-#github-button::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: -100%;
-    bottom: 0;
-    width: 100%;
-    opacity: 0.1;
-    background: var(--ifm-navbar-background-color);
-    transition: right 0.5s;
-    pointer-events: none;
-}
-
-[data-theme='dark'] #github-button::before {
-    opacity: 0.3;
-}
-
-#github-button:hover::before {
-    right: 0;
-    pointer-events: mouse;
-}
-
-@media (max-width: 1200px) {
-    .navbar__items--right,
-    .navbar__items--left {
-        display: none;
-    }
-
-    .navbar__toggle {
-        display: inherit;
-    }
-}
-
-@media (min-width: 1201px) {
-    .navbar__toggle {
-        display: none;
-    }
-}
